--- a/domaene/pom.xml
+++ b/domaene/pom.xml
@@ -52,7 +52,7 @@
 
         <dependency>
             <groupId>info.cukes</groupId>
-            <artifactId>cucumber-testng</artifactId>
+            <artifactId>cucumber-junit</artifactId>
             <version>1.2.4</version>
             <scope>test</scope>
         </dependency>
@@ -105,6 +105,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
                 <configuration>
+                    <detail>true</detail>
                     <useFile>false</useFile>
                     <includes>
                         <include>**/*Test.java</include>
