--- a/domaene/pom.xml
+++ b/domaene/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -26,22 +27,6 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
         </dependency>
-
-        <dependency>
-            <!-- hamcrest-all muss vor testng in der Abhängigkeitsliste stehe,
-             da sonst die hamcrest matcher nicht funktionieren. -->
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
-            <version>1.3</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>6.9.6</version>
-            <scope>test</scope>
-        </dependency -->
 
         <dependency>
             <groupId>info.cukes</groupId>
@@ -113,6 +98,16 @@
                 </configuration>
             </plugin>
 
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.18.1</version>
+                <configuration>
+                    <aggregate>true</aggregate>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -132,7 +127,8 @@
                 <configuration>
                     <instrumentation>
                         <ignoreMethodAnnotations>
-                            <ignoreMethodAnnotation>de.therapeutenkiller.haushaltsbuch.domaene.CoverageIgnore
+                            <ignoreMethodAnnotation>
+                                de.therapeutenkiller.haushaltsbuch.domaene.CoverageIgnore
                             </ignoreMethodAnnotation>
                         </ignoreMethodAnnotations>
                         <ignores>
@@ -144,8 +140,8 @@
                         </excludes>
                     </instrumentation>
                     <check>
-                        <branchRate>85</branchRate>
-                        <lineRate>85</lineRate>
+                        <branchRate>100</branchRate>
+                        <lineRate>100</lineRate>
                         <haltOnFailure>true</haltOnFailure>
                         <totalBranchRate>100</totalBranchRate>
                         <totalLineRate>100</totalLineRate>
@@ -184,7 +180,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>6.10.1</version>
+                <version>2.16</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -204,11 +200,22 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>cobertura</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.18.1</version>
                 <configuration>
-                    <formats>
-                        <format>html</format>
-                        <format>xml</format>
-                    </formats>
+                    <outputName>Unit Tests</outputName>
                 </configuration>
             </plugin>
         </plugins>
