--- a/domaene/pom.xml
+++ b/domaene/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>domaene</artifactId>
     <packaging>jar</packaging>
 
-    <name>Domäne</name>
+    <name>${project.artifactId}-${project.version}</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,6 +22,19 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.8.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
+            <artifactId>aspekte</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -41,6 +54,7 @@
             <version>1.0</version>
             <scope>compile</scope>
         </dependency>
+
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-java8</artifactId>
@@ -204,6 +218,31 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>xml-maven-plugin</artifactId>
                 <version>1.0</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>aspectj-maven-plugin</artifactId>
+                <version>1.8</version>
+                <configuration>
+                    <complianceLevel>1.8</complianceLevel>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <aspectLibraries>
+                        <aspectLibrary>
+                            <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
+                            <artifactId>aspekte</artifactId>
+                        </aspectLibrary>
+                    </aspectLibraries>
+                    <execution>
+                        <execution>
+                            <goals>
+                                <goal>compile</goal>
+                                <goal>test-compile</goal>
+                            </goals>
+                        </execution>
+                    </execution>
+                </configuration>
             </plugin>
         </plugins>
     </build>
