--- a/pom.xml
+++ b/pom.xml
@@ -14,21 +14,18 @@
 
     <packaging>pom</packaging>
 
-    <name>Haushaltsbuch</name>
+    <name>${project.artifactId}-${project.version}</name>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
     <scm>
         <developerConnection>scm:git:http://d-scm.sosi20.prosoz.de/sosi20/grundantrag.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
-
-    <properties>
-
-        <!--
-        Legt den URL Pfad für die Webservices fest. Es dürfen keine Pfadtrennzeichen ("/") enthalten sein.
-        -->
-        <app.context.root>haushaltsbuch-${project.version}</app.context.root>
-
-    </properties>
 
     <dependencyManagement>
         <dependencies>
@@ -37,30 +34,76 @@
                 <artifactId>domaene</artifactId>
                 <version>${project.version}</version>
             </dependency>
+
+
+                <dependency>
+                    <groupId>org.stackoverflow</groupId>
+                    <artifactId>Q12423965-ProjectA</artifactId>
+                    <version>${project.version}</version>
+                </dependency>
+
         </dependencies>
 
     </dependencyManagement>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.8.7</version>
+        </dependency>
     </dependencies>
 
     <build>
-    <plugins>
-    <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.3</version>
-        <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
-            <encoding>UTF-8</encoding>
-        </configuration>
-    </plugin>
-    </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>aspectj-maven-plugin</artifactId>
+                    <version>1.8</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>compile</goal>
+                                <goal>test-compile</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <complianceLevel>1.8</complianceLevel>
+                        <source>${maven.compiler.source}</source>
+                        <target>${maven.compiler.target}</target>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>2.5.1</version>
+                    <configuration>
+
+                        <source>${maven.compiler.source}</source>
+                        <target>${maven.compiler.target}</target>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
     <modules>
         <module>domaene</module>
+        <module>aspekte</module>
     </modules>
 </project>
 
