--- a/aspekte/pom.xml
+++ b/aspekte/pom.xml
@@ -19,6 +19,12 @@
     </properties>
 
     <dependencies>
+        <!--
+        <dependency>
+            <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
+            <artifactId>config</artifactId>
+        </dependency>
+        -->
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
@@ -34,6 +40,14 @@
 
     <build>
         <plugins>
+            <!-- checkstyle -->
+            <!-- Do not overwrite settings from parent pom -->
+            <!--
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+            </plugin>
+            -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>aspectj-maven-plugin</artifactId>
