--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+
+        <!-- Benutze die selbe Checkstype Version, wie das IntelliJ Plugin ! -->
+        <checkstyle.version>6.10.1</checkstyle.version>
+        <checkstyle.config.location>codingrules/therapeuten_checks.xml</checkstyle.config.location>
     </properties>
 
     <scm>
@@ -35,8 +39,24 @@
                 <version>${project.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
+                <artifactId>aspekte</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
-                <dependency>
+            <!-- Dieses Modul besitzt ausschließlich Build Abhängigkeiten und wird
+             deshalb im Pluginmanagement hinzugefügt.-->
+
+            <!--
+            <dependency>
+                <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
+                <artifactId>config</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            -->
+
+            <dependency>
                     <groupId>org.stackoverflow</groupId>
                     <artifactId>Q12423965-ProjectA</artifactId>
                     <version>${project.version}</version>
@@ -46,17 +66,11 @@
 
     </dependencyManagement>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-            <version>1.8.7</version>
-        </dependency>
-    </dependencies>
-
     <build>
         <pluginManagement>
             <plugins>
+
+                <!-- aspectj -->
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>aspectj-maven-plugin</artifactId>
@@ -75,20 +89,68 @@
                         <target>${maven.compiler.target}</target>
                     </configuration>
                 </plugin>
+
+                <!-- compiler -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.5.1</version>
+                    <version>3.3</version>
                     <configuration>
-
                         <source>${maven.compiler.source}</source>
                         <target>${maven.compiler.target}</target>
+                        <encoding>UTF-8</encoding>
                     </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
 
         <plugins>
+
+            <!-- checkstyle -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.16</version>
+
+                <dependencies>
+                    <dependency>
+                        <groupId>com.puppycrawl.tools</groupId>
+                        <artifactId>checkstyle</artifactId>
+                        <version>${checkstyle.version}</version>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>de.therapeutenkiller.haushaltsbuch</groupId>
+                        <artifactId>config</artifactId>
+                        <version>${project.version}</version>
+                    </dependency>
+
+                </dependencies>
+
+                <configuration>
+                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                    <includeResources>true</includeResources>
+                    <detail>true</detail>
+
+                    <skip>${skipTests}</skip>
+
+                    <failsOnError>true</failsOnError>
+                    <consoleOutput>true</consoleOutput>
+                </configuration>
+
+                <executions>
+                    <execution>
+                        <id>validate</id>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+
+            </plugin>
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -102,8 +164,9 @@
         </plugins>
     </build>
     <modules>
-        <module>domaene</module>
+        <module>config</module>
         <module>aspekte</module>
+        <module>domaene</module>
     </modules>
 </project>
 
