--- a/domaene/pom.xml
+++ b/domaene/pom.xml
@@ -82,14 +82,12 @@
             <groupId>org.jboss.weld.se</groupId>
             <artifactId>weld-se</artifactId>
             <version>2.3.1.Final</version>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.jboss</groupId>
             <artifactId>jandex</artifactId>
             <version>2.0.0.Final</version>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -233,6 +231,15 @@
             </plugin>
 
 
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>
+                        <arg>-Xlint</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+
         <!-- plugins zur Qualitätssicherung -->
 
             <!-- gmavenplus (für Tests mit Spock-Framework -->
@@ -282,7 +289,6 @@
                     </execution>
                 </executions>
             </plugin>
-
 
             <!-- checkstyle -->
             <plugin>
@@ -349,7 +355,6 @@
                     </execution>
                 </executions>
             </plugin>
-
 
         </plugins>
     </build>
