PMD Fehler behoben Checkstyle Fehler behoben Erweiterung des Szanerios Konto hinzufügen.

--- a/domaene/pom.xml
+++ b/domaene/pom.xml
@@ -283,6 +283,8 @@
                 </dependencies>
 
                 <configuration>
+                    <skip>${skipTests}</skip>
+                    <linkXRef>false</linkXRef>
                     <verbose>true</verbose>
                     <includeTests>true</includeTests>
                     <rulesets>
