--- a/domaene/pom.xml
+++ b/domaene/pom.xml
@@ -93,23 +93,19 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Erforderlich für CDI Annotationen in der Domäne -->
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
         </dependency>
 
+        <!-- Die Tests liefern eine Laufzeitumgebung mit CDI für die Domäne -->
         <dependency>
             <groupId>org.jboss.weld.se</groupId>
             <artifactId>weld-se</artifactId>
             <version>2.3.1.Final</version>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jboss</groupId>
-            <artifactId>jandex</artifactId>
-            <version>2.0.0.Final</version>
         </dependency>
 
         <dependency>
