Spike Aggregatwurzel: Deltaspike für Tests mit JPA und EntityManager (H2 DB)

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,10 @@
 
         <!-- Version für die Codierungunterastützung mit Richtlinien und Aspekten -->
         <version.de.therapeutenkiller.coding>0.0.24</version.de.therapeutenkiller.coding>
+
+
+        <version.deltaspike>1.5.2</version.deltaspike>
+        <version.weld.se>2.3.1.Final</version.weld.se>
     </properties>
 
     <scm>
@@ -86,6 +90,85 @@
                 <artifactId>equalsverifier</artifactId>
                 <version>1.7.5</version>
                 <scope>test</scope>
+            </dependency>
+
+            <!-- Test-Infrastruktur -->
+
+            <!-- Für die Integrationstests wird Deltaspike verwendet, weil Arquillian
+            nicht immer so gut funktioniert -->
+            <dependency>
+                <groupId>org.apache.deltaspike.core</groupId>
+                <artifactId>deltaspike-core-api</artifactId>
+                <version>${version.deltaspike}</version>
+                <scope>compile</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.deltaspike.core</groupId>
+                <artifactId>deltaspike-core-impl</artifactId>
+                <version>${version.deltaspike}</version>
+                <scope>runtime</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.deltaspike.cdictrl</groupId>
+                <artifactId>deltaspike-cdictrl-api</artifactId>
+                <version>${version.deltaspike}</version>
+                <scope>compile</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.deltaspike.modules</groupId>
+                <artifactId>deltaspike-jpa-module-api</artifactId>
+                <version>${version.deltaspike}</version>
+                <scope>compile</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.deltaspike.modules</groupId>
+                <artifactId>deltaspike-jpa-module-impl</artifactId>
+                <version>${version.deltaspike}</version>
+                <scope>runtime</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.deltaspike.modules</groupId>
+                <artifactId>deltaspike-test-control-module-api</artifactId>
+                <version>${version.deltaspike}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.deltaspike.modules</groupId>
+                <artifactId>deltaspike-test-control-module-impl</artifactId>
+                <version>${version.deltaspike}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <!-- Dependency Injection für Java EE, Arquillian Wildfly Embedded und Deltaspike -->
+            <dependency>
+                <groupId>org.jboss.weld.se</groupId>
+                <artifactId>weld-se</artifactId>
+                <version>${version.weld.se}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <!-- Alles für Arquillian -->
+            <dependency>
+                <groupId>org.jboss.arquillian</groupId>
+                <artifactId>arquillian-bom</artifactId>
+                <version>1.1.9.Final</version>
+                <!-- version>1.1.10.Final</version -->
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.shrinkwrap.resolver</groupId>
+                <artifactId>shrinkwrap-resolver-bom</artifactId>
+                <version>2.2.0</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
         </dependencies>
@@ -171,6 +254,79 @@
 
     </distributionManagement>
 
+    <profiles>
+        <profile>
+            <id>arquillian-wildfly-embedded</id>
+            <properties>
+                <arquillian.version>1.1.9.Final</arquillian.version>
+                <junit.version>4.12</junit.version>
+                <maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
+                <maven.surefire.plugin.version>2.18.1</maven.surefire.plugin.version>
+                <slf4j.version>1.7.12</slf4j.version>
+                <wildfly.version>8.2.1.Final</wildfly.version>
+            </properties>
+            <dependencyManagement>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.deltaspike.cdictrl</groupId>
+                        <artifactId>deltaspike-cdictrl-weld</artifactId>
+                        <version>${version.deltaspike}</version>
+                        <scope>test</scope>
+                    </dependency>
+                </dependencies>
+            </dependencyManagement>
+            <build>
+                <testResources>
+                    <testResource>
+                        <directory>src/test/resources-wildfly-embedded</directory>
+                    </testResource>
+                </testResources>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>${maven.dependency.plugin.version}</version>
+                        <executions>
+                            <!-- Entpackt Wildfly ins target-Verzeichnis -->
+                            <execution>
+                                <id>unpack</id>
+                                <phase>process-test-classes</phase>
+                                <goals>
+                                    <goal>unpack</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>org.wildfly</groupId>
+                                            <artifactId>wildfly-dist</artifactId>
+                                            <version>${wildfly.version}</version>
+                                            <type>zip</type>
+                                            <overWrite>false</overWrite>
+                                            <outputDirectory>${project.build.directory}</outputDirectory>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <!-- Tests ausführen; Kann auch mit failsafe-Plugin für Integrationstests geschehen. -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.plugin.version}</version>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+                                <jboss.home>${project.build.directory}/wildfly-${wildfly.version}</jboss.home>
+                                <module.path>${project.build.directory}/wildfly-${wildfly.version}/modules</module.path>
+                            </systemPropertyVariables>
+                            <redirectTestOutputToFile>false</redirectTestOutputToFile>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
     <modules>
         <module>domaene</module>
         <module>infrastruktur</module>
